# a_maze_ing

./: .gitignore  MANIFEST.in  Makefile  README.md  a_maze_ing.py  config.txt  mlx-2.2-py3-none-any.whl  pyproject.toml  requirement.txt  requirements.txt
srcs/: parser.py
srcs/config/: parser.py
srcs/generator/: dfs.py  maze_gen.py  solver.py
srcs/maze/: button.py  help_display.py  maze.py  maze_display.py  maze_parser.py  parser.py
srcs/mazegen/: Readme.md  __init__.py  config_parser.py  maze_gen.py
