[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
description = "Maze generation using DFS algorithm with A* pathfinding solver"
readme = "srcs/mazegen/README.md"
requires-python = ">=3.10"
authors = [
    {name = "nahecre"}
]
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
]

[tool.setuptools.packages.find]
where = ["srcs"]
include = ["mazegen*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
mazegen = ["*.md"]
